# OTUS_HW1

./: CMakeLists.txt  CmakeLists.txt  README.md  config.h.in  head.cpp  head.h  main.cpp
.github/workflows/: release.yml
lib/: CMakeLists.txt  lib.cpp  lib.h
src/: CMakeLists.txt  CmakeLists.txt  config.h.in  main.cpp
