cmake_minimum_required(VERSION 3.0)

set(PATCH_VERSION CACHE INTERNAL "Patch version")
set(PROJECT_VERSION 0.0.${PATCH_VERSION})

project(Test VERSION ${PROJECT_VERSION})


configure_file(config.h.in  ${CMAKE_CURRENT_BINARY_DIR}/config.h)

set(SOURCES main.cpp head.cpp)
set(HEADERS head.h)

add_executable(TEST ${SOURCES} ${HEADERS})

set_target_properties(
    TEST PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED ON
)

target_include_directories(
    TEST 
    PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT example@example.com)
INCLUDE(CPack)
